<resources>
    <string name="app_name">SharpPerfection</string>

    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_sign_in">Sign In</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="btn_new_user">New User?</string>
    <string name="btn_forgot_password">Forgot Password?</string>
    <string name="btn_already_member">Already a member?</string>
    <string name="enter_email">Enter email!</string>
    <string name="enter_password">Enter password!</string>
    <string name="password_too_short">Password is too short</string>
    <string name="check_email">Check email or password</string>

    <string name="workout">Workout</string>
    <string name="all_workouts">All Workouts</string>
    <string name="no_workouts">No workouts on this date</string>

    <string name="start_time">Start Time:</string>
    <string name="start_time_list_item">Start:</string>
    <string name="finish_time">Finish Time:</string>
    <string name="finish_time_list_item">Finish:</string>

    <string name="rest">Rest</string>
    <string name="duration">00:00:00</string>
    <string name="min_duration">00:00</string>

    <string name="exercise">Exercise</string>

    <string name="dot">.</string>
    <string name="x">x</string>

    <string name="set">Set</string>
    <string name="set_canceled">Set canceled</string>
    <string name="weight">Weight:</string>
    <string name="reps">Reps:</string>
    <string name="set_duration">Set Duration</string>
    <string name="set_rest">Set Rest</string>
    <string name="enter_results">Enter Results</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>

    <string name="filters">Filters</string>
    <string name="favourite">Favourite</string>
    <string name="delete">Delete</string>

    <string name="muscle_groups">Muscle Groups:</string>
    <string name="biceps">Biceps</string>
    <string name="triceps">Triceps</string>
    <string name="shoulders">Shoulders</string>
    <string name="chest">Chest</string>
    <string name="back">Back</string>
    <string name="legs">Legs</string>
    <string name="buttocks">Buttocks</string>
    <string name="abdomen">Abdomen</string>

    <string name="finish_workout_right">Finish workout please</string>
    <string name="finish_exercise_right">Finish exercise please</string>

    <string name="filters_favourite">Favourite</string>
    <string name="filters_by_date">Filter by date</string>
    <string name="filters_from">From</string>
    <string name="filters_by">By</string>

    <string name="incorrect_date_range">Incorrect date range!</string>

    <string name="finish_workout_warning">Are you sure you want to finish the workout?</string>
    <string name="finish_exercise_warning">Are you sure you want to finish the exercise?</string>
</resources>
